# versobot

./: .gitignore  1_Exercise_1.py  pyproject.toml  simple_chat.py  streamlit_app.py  summarization.py  versobot_asst.py
.streamlit/: config.toml
app_pages/: prompting_tips.py
components/: chat.py  prompt_tips.py
pages_hidden/: summarization.py
utils/: config.py  prompt_tips.py  session.py
