[tool.poetry]
name = "versobot"
version = "0.1.0"
description = ""
authors = ["kavwad <123405488+kavwad@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
openai = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
